# os-labs

KP/: CMakeLists.txt  client.cpp  main.cpp  utils.cpp
os-lab-1/: CMakeLists.txt  io.c  io.h  main.c  to_lower.c  unify_spaces.c
os-lab-2/: CMakeLists.txt  main.cpp
os-lab-3/: CMakeLists.txt  main.c  to_lower.c  unify_spaces.c
os-lab-4/: linking_main.c
